--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 <body>
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
-
+    <br>
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description" >
+      <select name="priority" placeholder="priority"> 
+      </select>
       <input type="submit" value="Create New Task">
+      <br>
+      <button id="sort" >sort tasks</button>
     </form>
 
     <div id="list">
